--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kontak UKM</string>
     <string name="List_kosong">Belum ada data</string>
+    <string name="x_diklik">%1$s diklik!</string>
 </resources>
