Membuat navigasi ke form data baru

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="nama_ketua">Nama Ketua UKM</string>
     <string name="kontak_UKM">Kontak UKM</string>
     <string name="deskripsi">Deskripsi UKM</string>
+    <string name="kembali">Kembali</string>
+    <string name="simpan">Simpan</string>
 </resources>
