--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="kembali">Kembali</string>
     <string name="simpan">Simpan</string>
     <string name="edit_UKM">Ubah UKM</string>
+    <string name="invalid">Data UKM tidak boleh kosong.</string>
 </resources>
