--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="simpan">Simpan</string>
     <string name="edit_UKM">Ubah UKM</string>
     <string name="invalid">Data UKM tidak boleh kosong.</string>
+    <string name="lainnya">Opsi lainnya</string>
+    <string name="hapus">Hapus Catatan</string>
 </resources>
