--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,10 +13,14 @@
     <string name="edit_UKM">Ubah UKM</string>
     <string name="invalid">Data UKM tidak boleh kosong.</string>
     <string name="lainnya">Opsi lainnya</string>
-    <string name="hapus">Hapus Catatan</string>
+    <string name="hapus">Hapus UKM</string>
     <string name="pesan_hapus">Hapus UKM ini?</string>
     <string name="tombol_hapus">Hapus</string>
     <string name="tombol_batal">Batal</string>
     <string name="list">Tampilan list</string>
     <string name="grid">Tampilan grid</string>
+    <string name="recyclebin">Recycle Bin</string>
+    <string name="pulihkan">Pulihkan</string>
+    <string name="hapus_permanen">Hapus Permanen</string>
+
 </resources>
